# TDCR_Extend_Kinematic

./: README.md
cr_hw_interface/: CMakeLists.txt  README.md  cr_hw_interface.xml  package.xml
cr_hw_interface/controller/: cr_fwd_controller.yaml  cr_pos_controller.yaml
cr_hw_interface/include/cr_hw_interface/: Tendondrum.h  arduino_comms.h  config.h  cr_hw_interface.hpp  light_sub.hpp  piecewiseconstantcurvaturemodel.h  spacer.h
cr_hw_interface/launch/: CR.launch.py  FWD.launch.py
cr_hw_interface/meshes/: Holder_V5_LED_m.stl  Servo_Pulley_V5_m.stl
cr_hw_interface/src/: arduino_comms.cpp  cr_hw_interface.cpp  light_sub.cpp  piecewiseconstantcurvaturemodel.cpp  spacer.cpp  tendondrum.cpp
cr_hw_interface/urdf/: Continuum_Robot.urdf.xacro  robot_base.xacro  robot_control.xacro  servo_description.xacro  tdr_backbone.xacro
cr_sensor_interface/: CMakeLists.txt  README.md  cr_sensor_interface.xml  package.xml
cr_sensor_interface/config/: cr_sensor.yaml
cr_sensor_interface/include/cr_sensor_interface/: cr_sensor_interface.hpp
cr_sensor_interface/launch/: Sensor.launch.py
cr_sensor_interface/meshes/: EndSpacerModul_PCB_v0_13_m.stl  Spacer_V8_Sensor_m.stl
cr_sensor_interface/src/: cr_sensor_interface.cpp
cr_sensor_interface/urdf/: Continuum_Robot_with_sensor.urdf.xacro  robot_control_with_sensor.xacro
forward_commmand_publisher/: README.md  package.xml  setup.cfg  setup.py
forward_commmand_publisher/forward_command_pub/: sample_points.py
