<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forward_command_pub</name>
  <version>1.0.0</version>
  <description>Publish simple forward_command to the forward_command_controller</description>
  <maintainer email="uemaa@student.kit.edu">Guanqi Chen</maintainer>
  <license>MIT</license>

  <author email="uemaa@student.kit.edu">Guanqi Chen</author>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
